Add m3collector service and config with report endpoint (#1050)
